--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,27 @@
-# Yapılandırma dosyaları
-config.js
-
 # Dependencies
 node_modules/
 package-lock.json
 
-# IDE dosyaları
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE configurations
 .vscode/
 .idea/
 *.sublime-*
 
-# OS dosyaları
+# OS files
 .DS_Store
 Thumbs.db
 desktop.ini
 
-# Log dosyaları
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Ortam değişkenleri
-.env
-.env.local
-.env.*.local
+# Cache directories
+.cache/
+dist/
